--- a/style.css
+++ b/style.css
@@ -14,17 +14,30 @@
   box-sizing: 0;
 }
 body {
+  background-color: var(--gray-color);
+  color: var(--black-color);
   font-family: 'Trebuchet MS', Arial, sans-serif;
   font-size: 62.5%;
-  color: var(--black-color);
 }
 .shadow-out {
   box-shadow: 0px 5px 13px 0px rgba(0,0,0,0.12);
   -moz-box-shadow: 0px 5px 13px 0px rgba(0,0,0,0.12);
   -webkit-box-shadow: 0px 5px 13px 0px rgba(0,0,0,0.12);
 }
+a {
+  color: inherit;
+  text-decoration: none;
+  animation-duration: 2.5s;
+  animation-fill-mode: both;
+  animation-iteration-count: infinite;
+  animation-name: bounce;
+}
 h2, i {
   font-size: 1rem;
+}
+p {
+  color: var(--black-light-color);
+  font-size: 0.9rem;
 }
 .active h2, .active i{
   color: var(--primary-color);
@@ -36,15 +49,22 @@ h2, i {
   display: block;
 }
 .active p {
-  animation-duration: 1s;
+  animation-duration: 500ms;
   animation-fill-mode: both;
   animation-name: fadeTop;
 }
+.active i {
+  transform: rotate(-180deg);
+  transition: 500ms all ease-in-out;
+}
+
+
+/* Animaciones */ 
 @keyframes fadeTop {
   0% {
     z-index: 0;
     opacity: 0;
-    transform: translateY(-20px);
+    transform: translateY(-10px);
   }
   100% {
     z-index: 1;
@@ -52,23 +72,18 @@ h2, i {
     transform: translateY(0);
   }
 }
-p {
-  color: var(--black-light-color);
-  font-size: 0.9rem;
-}
-
-.active i {
-  transform: rotate(-180deg);
-  transition: 500ms all ease-in-out;
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+  40% {transform: translateY(-10px);}
+  60% {transform: translateY(-5px);}
 }
 
 /* Principal */
 .questions {
   align-items: center;
   justify-content: center;
-  background-color: var(--gray-color);
   display: flex;
-  height: 100vh;
+  height: 95vh;
   min-height: 600px;
   width: 100%;
 }
@@ -95,6 +110,7 @@ p {
   border-bottom: none;
 }
 .questions__container--item .item {
+  align-items: center;
   display: flex;
   justify-content: space-between;
   padding: 1rem 2rem;
@@ -111,4 +127,22 @@ p {
 }
 .questions__container--item .description p{
   padding: 1rem 2rem;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
+  font-weight: bold;
+  height: 5vh;
+}
+.footer__container {
+  display: flex;
+  align-items: center;
+}
+.footer__container a {
+  display: block;
+  margin: 0 0.2rem;
 }
